--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss", "node_modules/aos/dist/aos.css" 
             ],
-            "scripts": []
+            "scripts": ["node_modules/aos/dist/aos.js" ]
           },
           "configurations": {
             "production": {
